--- a/languages/html/umc_html_parser/Cargo.toml
+++ b/languages/html/umc_html_parser/Cargo.toml
@@ -14,6 +14,7 @@ description.workspace = true
 oxc_allocator = { workspace = true }
 oxc_diagnostics = { workspace = true }
 oxc_parser = { workspace = true, features = [] }
+umc_parser = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
