feat: migrate parser token and span representation to `u32` and `umc_span::Span` for improved memory efficiency

--- a/languages/html/umc_html_parser/Cargo.toml
+++ b/languages/html/umc_html_parser/Cargo.toml
@@ -17,6 +17,7 @@ oxc_parser = { workspace = true, features = [] }
 
 umc_html_ast = { workspace = true }
 umc_parser = { workspace = true }
+umc_span = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
