--- a/languages/html/umc_html_ast/Cargo.toml
+++ b/languages/html/umc_html_ast/Cargo.toml
@@ -11,4 +11,5 @@ rust-version.workspace = true
 description.workspace = true
 
 [dependencies]
+oxc_allocator = { workspace = true }
 umc_span = { workspace = true }
