--- a/languages/html/umc_html_parser/Cargo.toml
+++ b/languages/html/umc_html_parser/Cargo.toml
@@ -15,6 +15,7 @@ oxc_allocator = { workspace = true }
 oxc_diagnostics = { workspace = true }
 oxc_parser = { workspace = true, features = [] }
 
+memchr = { workspace = true }
 umc_html_ast = { workspace = true }
 umc_parser = { workspace = true }
 umc_span = { workspace = true }
