--- a/languages/html/umc_html_ast/Cargo.toml
+++ b/languages/html/umc_html_ast/Cargo.toml
@@ -12,4 +12,5 @@ description.workspace = true
 
 [dependencies]
 oxc_allocator = { workspace = true }
+umc_ast = { workspace = true }
 umc_span = { workspace = true }
