--- a/languages/html/umc_html_traverse/Cargo.toml
+++ b/languages/html/umc_html_traverse/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "umc_ast"
+name = "umc_html_traverse"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -9,3 +9,10 @@ license.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 description.workspace = true
+
+[dependencies]
+umc_html_ast = { workspace = true }
+umc_traverse = { workspace = true }
+
+[lints]
+workspace = true
