chore(style): enable clippy for exist crates

--- a/languages/html/umc_html_ast/Cargo.toml
+++ b/languages/html/umc_html_ast/Cargo.toml
@@ -13,3 +13,6 @@ description.workspace = true
 [dependencies]
 oxc_allocator = { workspace = true }
 umc_span = { workspace = true }
+
+[lints]
+workspace = true
