--- a/languages/html/umc_html_ast/Cargo.toml
+++ b/languages/html/umc_html_ast/Cargo.toml
@@ -12,6 +12,8 @@ description.workspace = true
 
 [dependencies]
 oxc_allocator = { workspace = true }
+oxc_ast = { workspace = true }
+oxc_diagnostics = { workspace = true }
 umc_span = { workspace = true }
 
 [lints]
