feat(html): add oxc_parser for `<script>` part (#22)

--- a/languages/html/umc_html_ast/Cargo.toml
+++ b/languages/html/umc_html_ast/Cargo.toml
@@ -12,6 +12,7 @@ description.workspace = true
 
 [dependencies]
 oxc_allocator = { workspace = true }
+oxc_ast = { workspace = true }
 umc_span = { workspace = true }
 
 [lints]
